--- a/wiki/Compilation.wiki
+++ b/wiki/Compilation.wiki
@@ -3,7 +3,7 @@
 
 = ARM9 Compilation =
 
-  # You need to get the last svn version of [htt://pjsip.org pjsip].
+  # You need to get the last svn version of [http://pjsip.org pjsip].
   # You need to download the patch for pjsip
   # Apply the patch
 {{{
