--- a/wiki/Compilation.wiki
+++ b/wiki/Compilation.wiki
@@ -7,7 +7,7 @@
   # You need to download the [http://svsip.googlecode.com/files/patch%20-%20pjsip-nds%20-%2020090305.txt.zip patch] for pjsip
   # Apply the patch
 {{{
-   patch -p0
+   patch -p0 < 'patch - pjsip-nds - 20090305.txt'
 }}}
   # Define in compile.sh the path of DEVKITPRO and DEVKITARM
   # compile
